# Clippy

./: .gitignore  Cargo.toml  README.md  build_deb.sh  build_rpm.sh  clippy.desktop  install.sh  io.github.CharanMunur.Clippy.desktop  io.github.CharanMunur.Clippy.metainfo.xml  io.github.CharanMunur.Clippy.yml  org.gnome.Clippy.desktop  uninstall.sh
src/: db.rs  hotkey.rs  main.rs  poller.rs  settings.rs  ui.rs
